k8s/cd/service/cloudflare-gateway/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-tunnel
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      gateway.envoyproxy.io/owning-gatewayclass: envoy-gateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cloudflare-tunnel
            k8s:app.kubernetes.io/name: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
